Segunda Entrega Proyecto Final

--- a/Menu/Exchange.html
+++ b/Menu/Exchange.html
@@ -124,7 +124,7 @@
         <article >
             <div class="img__pika">
                 <div class="img__globo__container"> 
-                    <a href="../menu/info.html" class="img__globo">need your help?</a>
+                    <a href="../menu/info.html" class="img__globo">need my help?</a>
                 </div>
                 <img src="../imagenes/Pikachu R-Gante.jpg" alt="" >
             </div>
