Desafio SASS terminado

--- a/Menu/Exchange.html
+++ b/Menu/Exchange.html
@@ -62,17 +62,17 @@
         <article class="Swap__Container">
             <div class="Swap__Titulo__Completo">
                 <div class="Swap__Titulo">
-                    <div class="Swap__Titulo__Grafica">
+                    <div>
                         <button class="Swap__Icono"><i class="fa-solid fa-chart-column"></i></i></button>
                     </div>
                     <h3 class="Swap__Titulo__Swap">Swap </h3>
-                    <div class="Swap__Titulo__Ajustes">
+                    <div>
                         <button class="Swap__Icono"><i class="fa-solid fa-gear"></i></button>
                         <button class="Swap__Icono"><i class="fa-solid fa-clock-rotate-left"></i></button>
                         <button class="Swap__Icono"><i class="fa-solid fa-arrow-rotate-right"></i></button>
                     </div>
                 </div>
-                <div class="Swap__TradeFor">Trade for token an instant</div>
+                <div >Trade for token an instant</div>
             </div>
             <div class="Swap__Container__Option">
                 <div class="Swap__Option">
